--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "heroku-postbuild": "npm run dev"
+
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.1",
@@ -32,5 +34,8 @@
   "devDependencies": {
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6"
+  },
+  "engines": {
+    "node": "version"
   }
 }
