--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "heroku-postbuild": "npm run dev"
+    "start": "next start -p $PORT"
 
   },
   "dependencies": {
